examples/test/testpolicy4077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4077
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key25: value2
      key17: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value24
          key0: value20
      podSelector:
        matchLabels:
          key27: value11
